--- a/src/grafana/grafana.ini
+++ b/src/grafana/grafana.ini
@@ -23,7 +23,7 @@
 ;temp_data_lifetime = 24h
 
 # Directory where grafana can store logs
-;logs = /var/log/grafana
+logs = /var/log/grafana
 
 # Directory where grafana will automatically scan and look for plugins
 ;plugins = /var/lib/grafana/plugins
