--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,11 +9,12 @@ services:
       - "8888:8888" # Prometheus metrics exposed by the collector
       - "13133:13133" # Health check endpoint
       - "55679:55679" # zPages
+      - "9091:9091" # Prometheus exporter
     volumes:
       - ./src/otel_collector/otel-collector-config.yaml:/etc/otel/config.yaml
     command:
       - "--config=/etc/otel/config.yaml"
-    profiles: [otel]
+    profiles: [all, otel]
 
 
 # Prometheus
@@ -39,7 +40,7 @@ services:
     restart: unless-stopped
     ports:
       - "9090:9090"
-    profiles: [prom]
+    profiles: [all, prom]
 
 # Grafana
   grafana:
@@ -55,6 +56,6 @@ services:
     volumes:
       - ./src/grafana/grafana.ini:/etc/grafana/grafana.ini
       - ./src/grafana/provisioning/:/etc/grafana/provisioning/
-    profiles: [prom]
+    profiles: [all, prom]
   
 
