--- a/src/otel_collector/otel-collector-config.yaml
+++ b/src/otel_collector/otel-collector-config.yaml
@@ -1,23 +1,18 @@
 receivers:
   mongodbatlas:
-    public_key: gmxaumln
-    private_key: f5b31bd6-81c4-46a4-a0b5-f15bd1d6645d
+    public_key: <public_key> # Required: Public key for the MongoDB Atlas API
+    private_key: <private_key> # Required: Private key for the MongoDB Atlas API
+    granularity : PT10S
     projects:                    # Required: List of projects to collect metrics from
       - name:  "James Osgood Demo Project"       # Replace with valid MongoDB Atlas project ID
+        include_clusters: [mon-test]
 
 exporters:
   debug:
     verbosity: detailed
 
-  # otlphttp/prometheus:
-  #   endpoint: "http://prometheus:9090/api/v1/otlp"
-  #   tls:
-  #     insecure: true
-  
   prometheus:
     endpoint: "otel_collector_atlas:9091"
-    const_labels:
-        source: jco
     send_timestamps: true
     metric_expiration: 180m
     enable_open_metrics: true
